# hsu-example3-common

./: .gitignore  .gitmodules  Makefile  Makefile.config  README.md  build-cli.bat  go.mod  go.sum  run-cli-50055.bat  run-cli-invalid-path.bat  run-cli-superechosrv-go.bat  run-cli-superechosrv-py.bat  run_client.py
api/proto/: echoservice.proto  generate-go.sh  generate-py.bat  generate-py.sh
cmd/echogrpccli/: main.go
go/: go.mod
go/api/proto/: version.go
go/cmd/cli/echogrpccli/: main.go
go/control/: gateway.go  handler.go  main_echo.go
go/pkg/control/: gateway.go  handler.go  main_echo.go
go/pkg/domain/: contract.go
py/api/proto/: echoservice_pb2_grpc.py  fix_imports.py
py/control/: gateway.py  handler.py  serve_echo.py
py/domain/: handler.py
python/: pyproject.toml
python/cli/: run_client.py
python/lib/control/: gateway.py  handler.py  serve_echo.py
python/lib/domain/: contract.py
